# fastapi-starter-playground

./: .env  .gitignore  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 7e8d168f77b6_create_users_table.py  890980a6e8ab_create_files_table.py  e5be246f2c55_create_users_table.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  files.py
app/core/: async_with_and_yield.md  config.py  database.py  models.py  security.py
app/modules/auth/: dependencies.py  router.py  schemas.py  service.py
app/modules/files/: dependencies.py  models.py  repository.py  schemas.py  service.py
app/modules/users/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/shared/storage/: factory.py  interface.py  local_storage.py
