[project]
name = "rest-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.138.2",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "sqlalchemy>=2.0.51",
]
[tool.fastapi]
entrypoint = "app.main:app"
